--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Bill Yuan Hong Sun</h1>
 Machine Learning and Software Engineer</h5>
 <p>
 I am currently a third-year <a href="https://engsci.utoronto.ca/explore_our_program/majors/machine-intelligence/">Machine Learning and Artificial Intelligence</a> student @ University of Toronto. 
-This portfolio is a showcase of my skills, projects, and insights. Have a look!
+This portfolio is a showcase of my skills, projects, and insights. Take a look!
 </p>
 <ul>
 <li><a href="https://www.linkedin.com/in/bill-yuan-hong-sun/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
@@ -43,7 +43,7 @@ This portfolio is a showcase of my skills, projects, and insights. Have a look!
 <button><a href="overview.html">About</a></button>
 <button><a href="projects.html">Projects</a></button>
 <button><a href="files/Bill-Yuan-Hong-Sun-Resume-1.pdf">Résumé</a></button>
-<button><a href="blogs.html">Blogs</a></button>
+<button><a href="blogs.html">Blog</a></button>
 </div>
 
 
