--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@ Bill Yuan Hong Sun</h1>
 <h5>
 Machine Learning and Software Engineer</h5>
 <p>
-I am currently a third-year <a href="https://engsci.utoronto.ca/explore_our_program/majors/machine-intelligence/">Machine Learning and Artificial Intelligence</a> student @ University of Toronto. 
-This portfolio is a showcase of my skills, projects, and insights. Take a look!
+Hi! I am currently a third-year <a href="https://engsci.utoronto.ca/explore_our_program/majors/machine-intelligence/" style="color: #ffbfbf; padding: 0">Machine Learning and Artificial Intelligence</a> student @ University of Toronto. This portfolio is a showcase of my skills, projects, and insights. Take a look!
 </p>
 <ul>
 <li><a href="https://www.linkedin.com/in/bill-yuan-hong-sun/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
