--- a/overview.html
+++ b/overview.html
@@ -67,6 +67,11 @@
 
 <h1>About Me</h1><br>
 
+<p>Welcome! I’m Bill Sun, a third-year Engineering Science student at the University of Toronto, majoring in Machine Learning and Artificial Intelligence. I enjoy using software, big data, machine learning, and the engineering approach to solve challenging problems.</p>
+
+<p>In my spare time, I like to workout, play sports, travel, photograph weather and nature, mentor younger peers, and read the news and books.</p><br><br>
+
+
 <h2 id="skills" style="text-align:center;">Skills Summary</h2>
 
 <style>
@@ -253,8 +258,7 @@ th, td{
 
 
 <p>Click the images to view the details for each project.</p> 
-<p>A more detailed showcase of all my projects and extracurriculars can be accessed from the menu above.</p>
-<p>If you are interested, you can view my <b>résumé</b> <a href="files/Yuan Hong (Bill) Sun Resume.pdf">here</a></p><br>
+<p>If you are interested, you can view my <b>résumé</b> <a href="files/Bill-Yuan-Hong-Sun-Resume-1.pdf" style="color: #ffbfbf; padding: 0; text-decoration: none;">here</a>.</p><br>
 
 </div>
 
@@ -273,7 +277,7 @@ th, td{
 <p>Through the next 3 years, I am continuing my development as a professional engineer, and working to improve my design abilities such as creativity in thinking, as well as learning more about the technical aspects of design.</p>
 <br>
 
-<p>You can also read about my engineering insights and reflections in my <a href="blogs.html">blog posts</a>.</p>
+<p>You can also read about my engineering insights and reflections in my <a href="blogs.html" style="color: #ffbfbf; padding: 0; text-decoration: none;">blog</a>.</p>
 <br><br>
 
 </div>
