--- a/overview.html
+++ b/overview.html
@@ -233,7 +233,7 @@ th, td{
     </figure>
 
     <figure class="item">
-	<a href="boxhead.html" target="_blank"><img src="pics/game1.png" alt="portfolio item" width=400 height=250></a>
+	<a href="game.html" target="_blank"><img src="pics/game1.png" alt="portfolio item" width=400 height=250></a>
 	<figcaption class= "desc">
 	    <p><font color="white"><strong>Boxhead Video Game</strong></font></p>
 	    <p><font color="white">Python Programming Project</font></p>
