--- a/overview.html
+++ b/overview.html
@@ -67,7 +67,7 @@
 
 <h1>About Me</h1><br>
 
-<p>Welcome! I’m Bill Sun, a third-year Engineering Science student at the University of Toronto, majoring in Machine Learning and Artificial Intelligence. I am enthusiastic about using software, big data, machine learning, and the engineering approach to solve challenging problems and helping to improve people's lives through technology.</p>
+<p>Welcome! I’m Bill Sun, a third-year Engineering Science student at the University of Toronto, majoring in Machine Learning and Artificial Intelligence. I am enthusiastic about using software, big data, machine learning, and the engineering approach to solve challenging problems,  and helping to improve people's lives through technology.</p>
 
 <p>In my spare time, I like to workout, play sports, travel, photograph weather and nature, mentor younger peers, and read the news and books.</p><br><br>
 
