--- a/projects.html
+++ b/projects.html
@@ -129,10 +129,10 @@
 
 <div class="socialmedia">
     <a href="https://github.com/billyhsun"><img src="logos/github.png" alt="gh" width=30></a>
-    <a href="https://devpost.com/billyhsun"><img src="logos/devpost.png" alt="devpost" width=30></a>
     <a href="https://www.linkedin.com/in/bill-yuan-hong-sun/"><img src="logos/linkedin.png" alt="li" width=30></a>
-    <a href="https://www.facebook.com/billyuanhong.sun"><img src="logos/facebook.png" alt="fb" width=30></a>
-    <a href="https://www.instagram.com/billyhsun/?hl=en"><img src="logos/instagram.png" alt="in" width=30></a>
+    <a href="https://angel.co/bill-sun-1"><img src="logos/angellist.png" alt="li" width=30></a>
+    <a href="https://devpost.com/billyhsun"><img src="logos/devpost.png" alt="devpost" width=30></a>
+    <a href="https://stackoverflow.com/users/11026180/bill-sun"><img src="logos/stackoverflow.png" alt="li" width=30></a>
     <a href="mailto:billyuanhong.sun@mail.utoronto.ca"><img src="logos/outlook.png" alt="mail" width=30></a>
 </div>
 
