--- a/contact.html
+++ b/contact.html
@@ -126,13 +126,19 @@ input[type=submit]:hover {
 
 <p><b>Telephone</b>: +1 (647) 987-3896</p>
 
-<p><b>GitHub</b>: <a href="https://github.com/billyhsun">github.com/billyhsun</a></p>
+<div class="socialmedia">
+    <a href="https://github.com/billyhsun"><img src="logos/github.png" alt="gh" width=30></a>
+    <a href="https://www.linkedin.com/in/bill-yuan-hong-sun/"><img src="logos/linkedin.png" alt="li" width=30></a>
+    <a href="https://angel.co/bill-sun-1"><img src="logos/angellist.png" alt="li" width=30></a>
+    <a href="https://devpost.com/billyhsun"><img src="logos/devpost.png" alt="devpost" width=30></a>
+    <a href="https://stackoverflow.com/users/11026180/bill-sun"><img src="logos/stackoverflow.png" alt="li" width=30></a>
+    <a href="https://www.instagram.com/billyhsun/?hl=en"><img src="logos/instagram.png" alt="in" width=30></a>
+    <a href="https://www.facebook.com/billyuanhong.sun"><img src="logos/facebook.png" alt="fb" width=30></a>
+    <a href="https://twitter.com/billsunswag"><img src="logos/twitter.png" alt="fb" width=30></a>
+    <a href="mailto:billyuanhong.sun@mail.utoronto.ca"><img src="logos/outlook.png" alt="mail" width=30></a>
+</div>
 
-<p><b>LinkedIn</b>: <a href="https://www.linkedin.com/in/bill-yuan-hong-sun/">Bill (Yuan Hong) Sun</a></p>
-
-<p><b>Facebook</b>: <a href="https://www.facebook.com/billyuanhong.sun">Bill Yuanhong Sun</a></p>
-
-<p>If you are interested, my <b>résumé</b> can be found <a href="Yuan Hong (Bill) Sun Resume.pdf">here</a></p>
+<p>If you are interested, my <b>résumé</b> can be found <a href="files/Bill-Yuan-Hong-Sun-Resume-1.pdf">here</a></p>
 <br>
 <br>
 <br>
@@ -147,10 +153,10 @@ input[type=submit]:hover {
 
 <div class="socialmedia">
     <a href="https://github.com/billyhsun"><img src="logos/github.png" alt="gh" width=30></a>
-    <a href="https://devpost.com/billyhsun"><img src="logos/devpost.png" alt="devpost" width=30></a>
     <a href="https://www.linkedin.com/in/bill-yuan-hong-sun/"><img src="logos/linkedin.png" alt="li" width=30></a>
-    <a href="https://www.facebook.com/billyuanhong.sun"><img src="logos/facebook.png" alt="fb" width=30></a>
-    <a href="https://www.instagram.com/billyhsun/?hl=en"><img src="logos/instagram.png" alt="in" width=30></a>
+    <a href="https://angel.co/bill-sun-1"><img src="logos/angellist.png" alt="li" width=30></a>
+    <a href="https://devpost.com/billyhsun"><img src="logos/devpost.png" alt="devpost" width=30></a>
+    <a href="https://stackoverflow.com/users/11026180/bill-sun"><img src="logos/stackoverflow.png" alt="li" width=30></a>
     <a href="mailto:billyuanhong.sun@mail.utoronto.ca"><img src="logos/outlook.png" alt="mail" width=30></a>
 </div>
 
