--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Bill Yuan Hong Sun</h1>
 <h5>
 Machine Learning and Software Engineer</h5>
 <p>
-Hi! I am currently a third-year <a href="https://engsci.utoronto.ca/explore_our_program/majors/machine-intelligence/" style="color: #ffbfbf; padding: 0">Machine Learning and Artificial Intelligence</a> student @ University of Toronto. This portfolio is a showcase of my skills, projects, and insights. Take a look!
+Hi! I am a third-year <a href="https://engsci.utoronto.ca/explore_our_program/majors/machine-intelligence/" style="color: #ffbfbf; padding: 0">Machine Learning and Artificial Intelligence</a> student @ University of Toronto. I am currently interning at <a href="https://www.nuralogix.ai/" style="color: #ffbfbf; padding: 0">NuraLogix</a> as a Data Science Software Developer. This is a showcase of my skills, projects, and insights. Take a look!
 </p>
 <ul>
 <li><a href="https://www.linkedin.com/in/bill-yuan-hong-sun/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
