--- a/aer201.html
+++ b/aer201.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 
-{% include "head.html" %}
+<div w3-include-html="head.html"></div>
 
-{% include "menu.html" %}
+<div w3-include-html="menu.html"></div>
 
 <div style="padding: 0% 10% 0% 10%; margin-top:170px; min-height:800px;">
 
@@ -39,7 +39,7 @@
 
 <br><br><br>
 
-{% include "footer.html" %}
+<div w3-include-html="footer.html"></div>
 
 </body>
 </html>﻿
