--- a/clubs.html
+++ b/clubs.html
@@ -2,11 +2,6 @@
 <html lang="en">
 <head>
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-
-
 <!--Website Information -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -72,10 +67,10 @@
 <h1>Extracurriculars Summary</h1><br>
 
     <figure class="item">
-	<a href="autodrive.html" target="_blank"><img src="pics/autodrive.jpg" alt="portfolio item" width=400 height=250></a>
+	<a href="toastmasters.html" target="_blank"><img src="pics/toastmasters.jpg" alt="portfolio item" width=400 height=250></a>
 	<figcaption class= "desc">
-	    <p><font color="white"><strong>Autodrive Team</strong></font></p>
-	    <p><font color="white">University of Toronto</font></p>
+	    <p><font color="white"><strong>Toastmasters</strong></font></p>
+	    <p><font color="white">North York Toastmasters Club</font></p>
 	</figcaption>
     </figure>
 
@@ -104,14 +99,6 @@
     </figure>
 
     <figure class="item">
-	<a href="fes.html" target="_blank"><img src="pics/Logo 2.png" alt="portfolio item" width=320 height=250></a>
-	<figcaption class= "desc">
-	    <p><font color="white"><strong>Future Engineers Society</strong></font></p>
-	    <p><font color="white">Earl Haig Secondary School</font></p>
-	</figcaption>
-    </figure>
-
-    <figure class="item">
 	<a href="weather.html" target="_blank"><img src="pics/el-nino.jpg" alt="portfolio item" width=400 height=250></a>
 	<figcaption class= "desc">
 	    <p><font color="white"><strong>Earth Sciences Hobby Research</strong></font></p>
@@ -119,7 +106,15 @@
 	</figcaption>
     </figure>
 
+    <figure class="item">
+	<a href="fes.html" target="_blank"><img src="pics/Logo 2.png" alt="portfolio item" width=250 height=250></a>
+	<figcaption class= "desc">
+		<p><font color="white"><strong>Future Engineers Society</strong></font></p>
+		<p><font color="white">Earl Haig Secondary School</font></p>
+	</figcaption>
+	</figure>
 
+<br>
 <p>Click the images to view the details for each activity.</p> 
 <br><br>
 </div>
