--- a/toastmasters.html
+++ b/toastmasters.html
@@ -75,6 +75,7 @@
 
 <p>Having been a Toastmasters club member since March 2019, I am presently working towards the Competant Communicator (CC) award, which requires the completion of 10 speeches (or one Toastmasters pathway).</p>
 
+</div>
 <br><br><br>
 
 <!--Footer-->
