--- a/overview.html
+++ b/overview.html
@@ -66,11 +66,16 @@
 
 <h1>About Me</h1><br>
 
-<p>Welcome! I’m Bill Sun, a third-year Engineering Science student at the University of Toronto, majoring in <a href="https://engsci.utoronto.ca/explore_our_program/majors/machine-intelligence/" style="color: #ffbfbf; padding: 0">Machine Learning and Artificial Intelligence</a>. I am enthusiastic about using software, big data, machine learning, and the engineering approach to solve challenging problems,  and helping to improve people's lives through technology.</p>
+  <p>Welcome! I’m Bill Sun, a third-year Engineering Science student at the University of Toronto, majoring in 
+    <a href="https://engsci.utoronto.ca/explore_our_program/majors/machine-intelligence/">
+    Machine Learning and Artificial Intelligence</a>. I am enthusiastic about using software, big data, machine learning, 
+    and the engineering approach to solve challenging problems, and helping to improve people's lives through technology.</p>
 
-<p>Beginning this May, I am interning at <a href="https://www.nuralogix.ai/" style="color: #ffbfbf; padding: 0">NuraLogix</a> as a Data Science Software Developer, where I am working with data and developing machine learning software that deals with image and video processing.</p>
+  <p>Beginning in May 2019, I have begun my <a href="https://engineeringcareers.utoronto.ca/work-experience-programs/professional-experience-year-co-op-program-pey-co-op/">professional experience year (PEY)</a> co-op
+    at <a href="https://www.nuralogix.ai/">NuraLogix</a> as a Data Science Software Developer, where my work is centered around developing a Python 
+    API client for simple access of the <a href="https://www.deepaffex.ai/en/">DeepAffex (DFX)</a> cloud service. I also worked on numerous smaller projects on-board.</p>
 
-<p>In my spare time, I like to workout, play sports, travel, photograph weather and nature, mentor younger peers, and read the news and books.</p><br><br>
+  <p>In my spare time, I like to workout, play sports, travel, photograph weather and nature, mentor younger peers, and read the news and books.</p><br><br>
 
 
 <h2 id="skills" style="text-align:center;">Skills Summary</h2>
@@ -101,8 +106,16 @@ table{
 th, td{
   text-align: center;
 }
-
-
+p a{
+  text-decoration: none;
+  color: #ffbfbf; 
+  padding: 0;
+}
+p a:hover{
+  text-decoration: underline;
+  color: #ffbfbf; 
+  padding: 0;
+}
 .container {
   width: 80%;
   margin-left: 10%;
